@@ -114,7 +114,6 @@ if (BUILD_TESTS)
             endif()
             if ("cfg-${TEST_NAME}" IN_LIST SKIP_TESTS)
             else()
-                # TODO: remove missingInclude disabling when it no longer is implied by --enable=information
                 # TODO: add syntax check
                 add_test(NAME cfg-${TEST_NAME}
                         COMMAND $<TARGET_FILE:cppcheck>
@@ -126,7 +125,6 @@ if (BUILD_TESTS)
                         --inconclusive
                         --force
                         --error-exitcode=1
-                        --disable=missingInclude
                         --inline-suppr
                         --debug-warnings
                         --suppress=checkersReport
